<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--    tools:context="finki.ukim.mpip.gladensum.AddAccDetailsActivity"-->
<!--    >-->

    <RadioGroup
        android:id="@+id/type_picker"
        android:layout_width="287dp"
        android:layout_height="150dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="164dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_basic"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:checked="true"
            android:text="@string/basic_user_name"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radio_driver"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/driver_user_name"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radio_restaurant"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/restaurant_user_name"
            android:textSize="25sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/picker_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="48dp"
        android:text="@string/picker_label_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/type_picker"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/picker_next"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:text="@string/picker_next_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_picker" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picker_next" />

</androidx.constraintlayout.widget.ConstraintLayout>
