<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_favourites"
        android:name="finki.ukim.mpip.gladensum.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="finki.ukim.mpip.gladensum.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_show_menu_to_user"
            app:destination="@id/show_menu_to_user" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_orders"
            app:destination="@id/navigation_orders" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_favourites"
            app:destination="@id/navigation_favourites" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_orders2"
            app:destination="@id/navigation_orders" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_account"
            app:destination="@id/navigation_account" />
        <action
            android:id="@+id/action_navigation_home_to_showOrderFragment"
            app:destination="@id/showOrderFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_orders"
        android:name="finki.ukim.mpip.gladensum.ui.orders.OrdersFragment"
        android:label="@string/title_orders" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="finki.ukim.mpip.gladensum.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_navigation_account_to_navigation_pick_default_address"
            app:destination="@id/navigation_pick_default_address" />
    </fragment>
    <fragment
        android:id="@+id/show_menu_to_user"
        android:name="finki.ukim.mpip.gladensum.ui.home.ShowMenuFragment"
        android:label="fragment_show_menu_to_user"
        tools:layout="@layout/fragment_show_menu_to_user" >
        <argument
            android:name="restaurant_id"
            app:argType="string" />
        <action
            android:id="@+id/action_show_menu_to_user_to_showMenuItemFragment"
            app:destination="@id/showMenuItemFragment" />
    </fragment>
    <fragment
        android:id="@+id/showMenuItemFragment"
        android:name="finki.ukim.mpip.gladensum.ui.home.ShowMenuItemFragment"
        android:label="fragment_show_menu_item"
        tools:layout="@layout/fragment_show_menu_item" >
        <argument
            android:name="item"
            app:argType="finki.ukim.mpip.gladensum.classes.MenuItem" />
        <argument
            android:name="order_item"
            app:argType="finki.ukim.mpip.gladensum.classes.OrderItem"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/showOrderFragment"
        android:name="finki.ukim.mpip.gladensum.ui.orders.ShowOrderUserFragment"
        android:label="fragment_show_order"
        tools:layout="@layout/fragment_show_order" />
    <fragment
        android:id="@+id/navigation_pick_default_address"
        android:name="finki.ukim.mpip.gladensum.ui.account.PickDefaultAddressFragment"
        android:label="@string/title_account"
        tools:layout="@layout/pick_default_address_fragment" />
</navigation>